--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,18 @@
-version: "3"
+version: '3.8'
+
 services:
-  app-db:
-    image: mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_DATABASE=myDB
-  app:
-    build: .
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: jenkins
     ports:
-      - "8081:8081"
-    depends_on:
-      - app-db
+      - "8080:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - JENKINS_OPTS=--httpPort=8080
+
+volumes:
+  jenkins_home:
+
